# osqp-matlab

./: .bumpversion.cfg  .gitignore  .gitmodules  CHANGELOG.md  README.md  make_osqp.m  osqp.m  osqp_mex.cpp  osqp_mex.hpp  run_osqp_tests.m
.github/workflows/: ci.yml  main.yml  release.yml
@osqp/: build.m  codegen.m  osqp.m  setup.m  solve.m  update.m  update_codegen_defines.m  update_settings.m  validate_settings.m  warm_start.m
@osqp/private/: linsys_solver_to_string.m  string_to_linsys_solver.m
c_sources/: CMakeLists.txt  arrays_matlab.h  interrupt_matlab.c  memory_matlab.c  memory_matlab.h  osqp_mex.cpp  osqp_mex.hpp  osqp_struct.h  osqp_struct_codegen_defines.cpp  osqp_struct_info.cpp  osqp_struct_settings.cpp  settings_matlab.cpp  settings_matlab.h
c_sources/configure/: config.cu
codegen/: make_emosqp.m  render_workspace.m
codegen/files_to_generate/: CMakeLists.txt  emosqp_mex.c
examples/: easy_lasso_qp.m  osqp_demo.m
package/: README.md  install_osqp.m  package_osqp.m
simulink/: osqp_block_init.m  osqp_library.mdl  osqp_library.slx  osqp_sfun.m  quadcopter_example.mdl  quadcopter_example.slx  quadcopter_example_initfcn.m
unittests/: basic_tests.m  codegen_mat_tests.m  codegen_vec_tests.m  dual_infeasibility_tests.m  non_cvx_tests.m  primal_infeasibility_tests.m  update_matrices_tests.m  warm_start_tests.m
